# GoogleTest-With-CMake

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/sample_lib_1/: CMakeLists.txt  sample_lib_1.cpp  sample_lib_1.hpp
src/sample_lib_2/: CMakeLists.txt  sample_lib_2.cpp  sample_lib_2.hpp
tests/: CMakeLists.txt
tests/testSampleLib1/: CMakeLists.txt  TestSampleLib1.cpp  TestSampleLib1.hpp  main.cpp
tests/testSampleLib2/: CMakeLists.txt  TestSampleLib2.cpp  TestSampleLib2.hpp
